Add security schemes to API docs
